--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 body {
   display: grid;
   place-items: center;
-  background: #456173;
+  background: #fff;
 }
 
 ul {
@@ -63,7 +63,7 @@ h3 {
 .app {
   width: 100%;
   height: 100%;
-  background: #DBD0BC;
+  background: #fff;
   overflow-y: scroll;
 }
 
